tests/fixtures/guardrails/invalid/webhook-imported-service-handler-reexport/app/routes/webhooks.app.uninstalled.ts
import { loadHealthCheck } from "~/app/services/health.server";

export { loadHealthCheck as action };
